fix(): Styles fixes to z-indexes and margins

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,7 +73,3 @@ mat-drawer-content {
     flex-direction: column;
     align-items: flex-start;
 }
-
-mat-drawer{
-    z-index: 0 !important;
-}
