--- a/src/assets/scss/mixins/_prev-layout.mixin.scss
+++ b/src/assets/scss/mixins/_prev-layout.mixin.scss
@@ -7,5 +7,6 @@
     @media screen and (max-width: 600px) {
         justify-content: center;
         padding-right: 0 !important;
+        padding-top: 0 !important;
     }
 }
